<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.landawn</groupId>
	<artifactId>abacus-cache</artifactId>
	<version>1.26.4</version>
	<packaging>jar</packaging>
	<name>abacus-cache</name>
	<description>Abacus Data Access and Analysis</description>
	<url>https://github.com/landawn/abacus-cache</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>https://github.com/landawn/abacus-cache/blob/master/LICENSE.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Haiyang Li</name>
			<email>70lihy@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/landawn/abacus-cache.git</connection>
		<developerConnection>scm:git:https://github.com/landawn/abacus-cache.git</developerConnection>
		<url>https://github.com/landawn/abacus-cache</url>
	</scm>

	<properties>
		<java.version>25</java.version>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<maven.compiler.release>25</maven.compiler.release>
		<junit.jupiter.version>5.10.1</junit.jupiter.version>
		<junit.platform.version>1.10.1</junit.platform.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.landawn</groupId>
			<artifactId>abacus-common</artifactId>
			<version>6.26.4</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.esotericsoftware</groupId>
			<artifactId>kryo</artifactId>
			<version>5.6.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.spy</groupId>
			<artifactId>spymemcached</artifactId>
			<version>2.12.3</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>3.10.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>3.2.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>org.ehcache</groupId>
		    <artifactId>ehcache</artifactId>
    		<version>3.9.11</version>
			<scope>provided</scope>
		</dependency> 

		<dependency>
			<groupId>org.rocksdb</groupId>
			<artifactId>rocksdbjni</artifactId>
			<version>9.10.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.36</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>${junit.platform.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.spotbugs</groupId>
			<artifactId>spotbugs-annotations</artifactId>
			<version>3.1.12</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<release>${maven.compiler.release}</release>
			        <annotationProcessorPaths>
			          <path>
			            <groupId>org.projectlombok</groupId>
			            <artifactId>lombok</artifactId>
			            <version>1.18.42</version>
			          </path>
			        </annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<doctitle>abacus-cache</doctitle>
					<show>public</show>
			        <source>25</source>
			        <encoding>UTF-8</encoding>
			        <doclint>all</doclint>    
					<source>${maven.compiler.source}</source>
					<detectJavaApiLink>false</detectJavaApiLink>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<includes>
						<include>**/AbacusCacheTestSuite.java</include>
					</includes>
					<useModulePath>false</useModulePath>
					<testFailureIgnore>true</testFailureIgnore> <!-- set to false if you want failures to fail the build -->
					<argLine>
          				-Dfile.encoding=UTF-8
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
						--add-opens java.base/java.io=ALL-UNNAMED
						--add-opens java.base/sun.nio.ch=ALL-UNNAMED
						--add-opens java.base/java.nio=ALL-UNNAMED
						--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
						--add-exports jdk.unsupported/sun.misc=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.14</version>
				<executions>
					<!-- Prepare agent in all modules via inheritance -->
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<!-- Generate a single aggregated report at the parent -->
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

	        <plugin>
	          <groupId>org.sonatype.central</groupId>
	          <artifactId>central-publishing-maven-plugin</artifactId>
	          <version>0.9.0</version>
	          <extensions>true</extensions>
	          <configuration>
	             <publishingServerId>central</publishingServerId>
	             <autoPublish>true</autoPublish>
	          </configuration>
	        </plugin>

		    <plugin>
		      <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-gpg-plugin</artifactId>
		      <version>3.2.8</version>
		      <executions>
		        <execution>
		          <id>sign-artifacts</id>
		          <phase>verify</phase> <!-- or deploy -->
		          <goals>
		            <goal>sign</goal>
		          </goals>
		        </execution>
		      </executions>
		    </plugin>
		</plugins>
	</build>
</project>
